added initial global styling, added max-width utility class "section" to header and page content

--- a/src/App.css
+++ b/src/App.css
@@ -10,13 +10,17 @@
   --color-light: #ffffff;
   --color-primary: #f78764;
   --color-secondary: #c6d8d3;
+  --border-radius: 3px;
+  --max-width: 900px;
+  --transition: all 0.3s ease;
+  --font-family: 'Noto Serif TC', serif;
 }
 
 /* base styles */
 body {
   font-size: 18px;
   line-height: 1.8;
-  font-family: 'Noto Serif TC', serif;
+  font-family: var(--font-family);
 }
 
 img {
@@ -32,7 +36,21 @@ li {
 }
 
 /* utilities */
+.section {
+  max-width: var(--max-width);
+  margin: auto;
+}
+
 .btn {
-  background: red;
-  color: white;
+  display: inline-block;
+  padding: 0.5rem 4rem;
+  border-radius: var(--border-radius);
+  cursor: pointer;
+  font-family: var(--font-family);
+  font-size: 1rem;
+}
+
+.btn-primary {
+  background: var(--color-primary);
+  color: var(--color-dark);
 }
