--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,8 @@
   --max-width: 900px;
   --transition: all 0.3s ease;
   --font-family: 'Noto Serif TC', serif;
+  --box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px,
+    rgba(17, 17, 26, 0.1) 0px 0px 8px;
 }
 
 /* base styles */
@@ -52,6 +54,7 @@ li {
   font-size: 1rem;
   width: 100%;
   transition: var(--transition);
+  box-shadow: var(--box-shadow);
 }
 
 .btn-primary {
