--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,6 @@ li {
 }
 
 .btn-primary:hover {
-  background: var(--color-light);
+  background: transparent;
   border: 1px solid var(--color-primary);
 }
